UIController.java: for sent messages, keep track of which destinations each group message was sent to, and which ones have been acked.  Now, a sent message description includes its destination(s) unless the message was sent to all members of the group.